# avail-lib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aleo_tools.rs  db.rs  env_var.rs  errors.rs  lib.rs  models.rs
src/aleo_tools/: api.rs  encryptor.rs  program_manager.rs  test_utils.rs
src/aleo_tools/api/: blocking.rs
src/aleo_tools/program_manager/: deploy.rs  execute.rs  network.rs  resolver.rs  transfer.rs
src/converters/: messages.rs
src/db/: connection_manager.rs
src/models/: constants.rs  encrypted_data.rs  fee_request.rs  friends.rs  local_storage.rs  network.rs  server_auth.rs  tokens.rs  traits.rs  user.rs
src/models/traits/: encryptable.rs
